# mastodon-automations

./: .gitignore  Cargo.toml  README.md  mastodon-data.toml
src/: instance.rs  main.rs
