[package]
name = "mastodon-automations-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
megalodon = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
