[package]
name = "mastodon-automations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
futures-util = "0.3.29"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"

[dependencies.mastodon-async]
version = "1.3.1"
features = ["toml", "mt"]

[features]
toml = []